--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 ---
 layout: default
 ---
-
-{% include intro.html %}
-{% include about.html %}
-{% include services.html %}
-{% include skills.html %}
-{% include experience.html %}
-{% include resume_btn.html %}
-{% include portfolio.html %}
-{% include contact.html %}
-{% include footer.html %}
+<div id="skrollr-body">
+  {% include intro.html %}
+  {% include about.html %}
+  {% include services.html %}
+  {% include skills.html %}
+  {% include experience.html %}
+  {% include resume_btn.html %}
+  {% include portfolio.html %}
+  {% include contact.html %}
+  {% include footer.html %}
+</div>
